# sipping-sauce

./: .env.example  .env.spooky.example  .gitignore  README.md  SEPD0C78915E83F.cnf.xml  dialplan.xml  pyproject.toml
partyline_llm/: __init__.py  __main__.py  audio.py  call.py  cli.py  config.py  incoming.py  phone.py  profiles.py  realtime.py  recording.py  sip.py  sip_digest.py  spooky_main.py  tcp_sip.py  webui.py
tests/: test_audio.py  test_config.py  test_incoming.py  test_profiles.py  test_realtime.py  test_recording.py  test_sip_digest.py  test_tcp_sip.py  test_webui.py
