[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "partyline-llm"
version = "0.1.0"
description = "Bridge SIP calls to Grok Voice or OpenAI Realtime agents"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "PyVoIP==1.6.8",
    "python-dotenv>=1.2,<2",
    "websockets>=16,<17",
]

[dependency-groups]
dev = ["pytest>=8.4,<9"]

[project.scripts]
partyline-llm = "partyline_llm.__main__:main"
spooky-llm = "partyline_llm.spooky_main:main"

[tool.setuptools.packages.find]
include = ["partyline_llm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
